--- a/fe-diploma-challenge/src/app/Components/login-page/login-page.component.html
+++ b/fe-diploma-challenge/src/app/Components/login-page/login-page.component.html
@@ -1,10 +1,8 @@
-<ng-container *ngIf="!this.auth.isAuthenticated$">
+<ng-container>
   <div class="login-page-container">
     <div class="login-box">
         <h1>Pets</h1>
-        <button (click)="login()">Login</button>
+        <button mat-raised-button color="primary" (click)="login()">Login</button>
     </div>
-
   </div>
 </ng-container>
-
