--- a/fe-diploma-challenge/src/app/Components/login-page/login-page.component.scss
+++ b/fe-diploma-challenge/src/app/Components/login-page/login-page.component.scss
@@ -2,9 +2,6 @@
     display: flex;
     align-content: center;
     justify-content: center;
-    background-color: lightblue;
-    height: 100vh;
-    width: 100vw;
 
     .login-box{
         display: flex;
@@ -21,12 +18,11 @@
             width: 100%;
             padding: 20px;
             border-radius: 10px;
-            transition: all 0.5s ease;
+            transition: all 0.6s ease;
             font-weight: bold;
 
             &:hover{
-                background-color: lightgray;
-                color: rgba(0, 0, 0, 0.696);
+                background-color: #3f51b5bb;
                 cursor: pointer;
             }
         }
