--- a/fe-diploma-challenge/src/app/Components/nav-bar/nav-bar.component.html
+++ b/fe-diploma-challenge/src/app/Components/nav-bar/nav-bar.component.html
@@ -13,7 +13,7 @@
   </mat-toolbar-row>
     <mat-toolbar-row *ngIf="isLoggedIn">
       <button mat-raised-button routerLink="/pets" routerLinkActive="active">Pets</button>
-      <button mat-raised-button routerLink="" routerLinkActive="">Pets</button>
+      <button mat-raised-button routerLink="/login" routerLinkActive="active">Pets</button>
 
     </mat-toolbar-row>
 </mat-toolbar>
