--- a/fe-diploma-challenge/src/app/Components/my-pets/my-pets.component.html
+++ b/fe-diploma-challenge/src/app/Components/my-pets/my-pets.component.html
@@ -1,3 +1,4 @@
 <div class="container" *ngIf="auth.user$ | async as user">
   <h1>Account: {{user.email}}</h1>
+  <app-pets-table></app-pets-table>
 </div>
