--- a/fe-diploma-challenge/src/app/Components/nav-bar/nav-bar.component.scss
+++ b/fe-diploma-challenge/src/app/Components/nav-bar/nav-bar.component.scss
@@ -22,7 +22,7 @@ button{
   transition: all 0.5s ease;
 
   &:hover{
-    background-color: #3f51b5;
+    background-color: #5668ce;
     color: white;
   }
 
