created a hacky refresh to reload data

--- a/fe-diploma-challenge/src/app/Components/treatment-page/create-treatment-form/create-treatment-form.component.html
+++ b/fe-diploma-challenge/src/app/Components/treatment-page/create-treatment-form/create-treatment-form.component.html
@@ -39,7 +39,8 @@
   </div>
 </form>
   <span>{{passwordValidation.errorMessage}}</span>
-  <button mat-raised-button color="primary" (click)="createProcedure()">Create Treatment</button>
+  <button mat-button (click)="createProcedure()">Create Treatment</button>
+  <button mat-button mat-dialog-close>Cancel</button>
 </div>
 
 
