procedure page added

--- a/fe-diploma-challenge/src/app/Components/nav-bar/nav-bar.component.html
+++ b/fe-diploma-challenge/src/app/Components/nav-bar/nav-bar.component.html
@@ -26,7 +26,7 @@
     <mat-toolbar-row *ngIf="isLoggedIn">
       <button mat-raised-button routerLink="/pets" routerLinkActive="active">Pets</button>
       <button mat-raised-button routerLink="/treatments" routerLinkActive="active">Treatment</button>
-
+      <button mat-raised-button routerLink="/procedures" routerLinkActive="active">Procedures</button>
     </mat-toolbar-row>
 </mat-toolbar>
 
