--- a/fe-diploma-challenge/src/app/Components/nav-bar/nav-bar.component.html
+++ b/fe-diploma-challenge/src/app/Components/nav-bar/nav-bar.component.html
@@ -5,7 +5,7 @@
        <button
       *ngIf="isLoggedIn"
       mat-mini-fab
-      matTooltip="Profile"
+      matTooltip="{{userEmail}}"
     >
       <mat-icon>
         person
