--- a/fe-diploma-challenge/src/app/Components/my-pets/my-pets.component.html
+++ b/fe-diploma-challenge/src/app/Components/my-pets/my-pets.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngIf="auth.user$ | async as user">
-  <h1>Account: {{user.email}}</h1>
+<div class="center">
+  <h1>Pets</h1>
   <app-pets-table></app-pets-table>
 </div>
