--- a/fe-diploma-challenge/src/app/Components/procedure-page/procedure-page.component.html
+++ b/fe-diploma-challenge/src/app/Components/procedure-page/procedure-page.component.html
@@ -1,5 +1,5 @@
-
-<table mat-table [dataSource]="procedureData" class="mat-elevation-z8">
+<div class="center">
+  <table mat-table [dataSource]="procedureData" class="mat-elevation-z8">
 
   <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
@@ -18,7 +18,7 @@
 
   <!-- Price Column -->
   <ng-container matColumnDef="Price">
-    <th mat-header-cell *matHeaderCellDef> Description </th>
+    <th mat-header-cell *matHeaderCellDef> Price </th>
     <td mat-cell *matCellDef="let element"> $ {{element.price}} </td>
   </ng-container>
 
@@ -28,3 +28,5 @@
   *matRowDef="let row;
   columns: displayedColumns;"></tr>
 </table>
+</div>
+
