user account can now be updated

--- a/fe-diploma-challenge/src/app/Components/nav-bar/nav-bar.component.html
+++ b/fe-diploma-challenge/src/app/Components/nav-bar/nav-bar.component.html
@@ -3,6 +3,7 @@
     <span>Pet App</span>
     <div class="right med-icon">
        <button
+       routerLink="/user"
       *ngIf="isLoggedIn"
       mat-mini-fab
       matTooltip="{{userEmail}}"
