--- a/fe-diploma-challenge/src/app/Components/procedure-page/procedure-page.component.html
+++ b/fe-diploma-challenge/src/app/Components/procedure-page/procedure-page.component.html
@@ -1,4 +1,5 @@
 <div class="center">
+  <h1>Procedures</h1>
   <table mat-table [dataSource]="procedureData" class="mat-elevation-z8">
 
   <!--- Note that these columns can be defined in any order.
