--- a/fe-diploma-challenge/src/app/Components/treatment-page/create-treatment-form/create-treatment-form.component.html
+++ b/fe-diploma-challenge/src/app/Components/treatment-page/create-treatment-form/create-treatment-form.component.html
@@ -5,7 +5,7 @@
     <mat-form-field appearance="fill">
       <mat-label>Pet</mat-label>
         <mat-select formControlName="Pet">
-          <mat-option *ngFor="let item of pets" value="{{item.petName}}">{{item.petName}}</mat-option>
+          <mat-option *ngFor="let item of pets" value="{{item.petName}}"> {{isAdmin ? "ID: " + item.ownerId :null}} {{item.petName}}</mat-option>
         </mat-select>
       </mat-form-field>
 
