--- a/fe-diploma-challenge/src/app/Components/treatment-page/treatment-page.component.html
+++ b/fe-diploma-challenge/src/app/Components/treatment-page/treatment-page.component.html
@@ -1,10 +1,7 @@
 
 <div class="center">
     <h1>Treatments</h1>
-    <table mat-table [dataSource]="treatmentData" class="mat-elevation-z8">
-
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
+    <table mat-table [dataSource]="treatmentData" class="mat-elevation-z8 table-responsive">
 
     <!-- Treatment ID Column -->
     <ng-container matColumnDef="ID">
@@ -46,6 +43,11 @@
     <ng-container matColumnDef="Payment">
       <th mat-header-cell *matHeaderCellDef> Payment </th>
       <td mat-cell *matCellDef="let element"> $ {{element.Payment}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="Amount Owed">
+      <th mat-header-cell *matHeaderCellDef> Amount Owed </th>
+      <td mat-cell *matCellDef="let element"> $ {{element.AmountOwed}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
