--- a/fe-diploma-challenge/src/app/Components/treatment-page/treatment-page.component.html
+++ b/fe-diploma-challenge/src/app/Components/treatment-page/treatment-page.component.html
@@ -1,7 +1,8 @@
 
 <div class="center">
     <h1>Treatments</h1>
-    <table mat-table [dataSource]="treatmentData" class="mat-elevation-z8 table-responsive">
+    <div class="center-paginator">
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 table-responsive">
 
     <!-- Treatment ID Column -->
     <ng-container matColumnDef="ID">
@@ -56,5 +57,8 @@
     *matRowDef="let row;
     columns: displayedColumns;"></tr>
   </table>
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users" class="table-responsive"></mat-paginator>
+</div>
+
   <button mat-raised-button color="primary" (click)="openTreatmentForm()">Create Treatment</button>
 </div>
