--- a/fe-diploma-challenge/src/app/Components/treatment-page/treatment-page.component.html
+++ b/fe-diploma-challenge/src/app/Components/treatment-page/treatment-page.component.html
@@ -57,7 +57,7 @@
     *matRowDef="let row;
     columns: displayedColumns;"></tr>
   </table>
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users" class="table-responsive"></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users" class=" mat-elevation-z8 table-responsive"></mat-paginator>
 </div>
 
   <button mat-raised-button color="primary" (click)="openTreatmentForm()">Create Treatment</button>
