--- a/fe-diploma-challenge/src/app/Components/sign-up-page/sign-up-page.component.html
+++ b/fe-diploma-challenge/src/app/Components/sign-up-page/sign-up-page.component.html
@@ -1,67 +1,66 @@
 <div class="sign-up-container">
   <h1>Sign Up</h1>
-<form class="sign-up-box" [formGroup]="signUpForm" (ngSubmit)="signUp()">
-  <div class="form-container">
-    <mat-form-field appearance="outline">
-      <mat-label>First Name</mat-label>
-      <input
-      formControlName="firstName"
-        type="text"
-        matInput placeholder="e.g.John"
-        >
-    </mat-form-field>
+  <form class="form-container" (ngSubmit)="signUp()">
+    <div class="form-container">
+      <mat-form-field appearance="outline">
+        <mat-label>First Name</mat-label>
+        <input
+        formControlName="firstName"
+          type="text"
+          matInput placeholder="e.g.John"
+          >
+      </mat-form-field>
 
-    <mat-form-field appearance="outline">
-      <mat-label>Last Name</mat-label>
-      <input
-        formControlName="lastName"
-        type="text"
-        matInput placeholder="e.g.Smith"
+      <mat-form-field appearance="outline">
+        <mat-label>Last Name</mat-label>
+        <input
+          formControlName="lastName"
+          type="text"
+          matInput placeholder="e.g.Smith"
+          >
+      </mat-form-field>
+    </div>
+    <div class="form-container">
+      <mat-form-field appearance="outline">
+        <mat-label>Phone Number</mat-label>
+        <input
+        formControlName="phoneNumber"
+        type="tel"
+        matInput
+        placeholder="e.g.040001234321"
         >
-    </mat-form-field>
-  </div>
-  <div class="form-container">
-    <mat-form-field appearance="outline">
-      <mat-label>Phone Number</mat-label>
-      <input
-      formControlName="phoneNumber"
-      type="tel"
-      matInput
-      placeholder="e.g.040001234321"
-      >
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-      <mat-label>Eamil</mat-label>
-      <input
-       formControlName="email"
-       type="email"
-       matInput
-       placeholder="e.g.john@example.com"
-      >
-    </mat-form-field>
-  </div>
-  <div class="form-container">
-    <mat-form-field appearance="outline">
-      <mat-label>Password</mat-label>
-      <input
-       formControlName="password"
-       type="password"
-       matInput
-       placeholder=""
-      >
-    </mat-form-field>
-    <mat-form-field appearance="outline">
-      <mat-label>Confirm Password</mat-label>
-      <input
-       formControlName="confirmPassword"
-       type="password"
-       matInput placeholder=""
-      >
-    </mat-form-field>
-  </div>
-</form>
+      </mat-form-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Eamil</mat-label>
+        <input
+        formControlName="email"
+        type="email"
+        matInput
+        placeholder="e.g.john@example.com"
+        >
+      </mat-form-field>
+    </div>
+    <div class="form-container">
+      <mat-form-field appearance="outline">
+        <mat-label>Password</mat-label>
+        <input
+        formControlName="password"
+        type="password"
+        matInput
+        placeholder=""
+        >
+      </mat-form-field>
+      <mat-form-field appearance="outline">
+        <mat-label>Confirm Password</mat-label>
+        <input
+        formControlName="confirmPassword"
+        type="password"
+        matInput placeholder=""
+        >
+      </mat-form-field>
+    </div>
+  </form>
   <span>{{passwordValidation.errorMessage}}</span>
   <button mat-raised-button color="primary" (click)="signUp()">Sign Up</button>
   <button mat-raised-button (click)="login()" color="primary">Login</button>
 </div>
-
