--- a/fe-diploma-challenge/src/app/Components/create-user-page/create-user-page.component.scss
+++ b/fe-diploma-challenge/src/app/Components/create-user-page/create-user-page.component.scss
@@ -1,17 +1,8 @@
-.form-container{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  column-gap: 11px;
-  align-items: center;
-}
-
-.sign-up-container{
+.create-user-container{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  row-gap: 10px;
 
   span{
     color: red;
@@ -27,4 +18,11 @@
       background-color: #3f51b5c8;
     }
   }
+}
+
+.form-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  column-gap: 11px;
 }
