--- a/fe-diploma-challenge/src/app/Components/treatment-page/treatment-page.component.html
+++ b/fe-diploma-challenge/src/app/Components/treatment-page/treatment-page.component.html
@@ -1,4 +1,3 @@
-
 <div class="center">
     <h1>Treatments</h1>
     <div class="center-paginator">
@@ -49,6 +48,21 @@
     <ng-container matColumnDef="Amount Owed">
       <th mat-header-cell *matHeaderCellDef> Amount Owed </th>
       <td mat-cell *matCellDef="let element"> $ {{element.AmountOwed}} </td>
+    </ng-container>
+
+    <ng-container *ngIf="isAdmin" matColumnDef="Paid">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element"
+      style="padding-bottom:10px auto"
+      >
+        <button
+        (click)="markAsPaid(element.ID)"
+        mat-flat-button
+        color="primary"
+        >
+        Mark as Paid
+        </button>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
