--- a/FE/src/app/Components/pets-page/pets-page.component.html
+++ b/FE/src/app/Components/pets-page/pets-page.component.html
@@ -1,1 +1,19 @@
-<p>pets-page works!</p>
+<table mat-table [dataSource]="petData" class="mat-elevation-z8 center">
+
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+
+  <!-- Position Column -->
+  <ng-container matColumnDef="PetName">
+    <th mat-header-cell *matHeaderCellDef>Pet Name</th>
+    <td mat-cell *matCellDef="let element"> {{element.PetName}} </td>
+  </ng-container>
+  <ng-container matColumnDef="Type">
+    <th mat-header-cell *matHeaderCellDef>Type</th>
+    <td mat-cell *matCellDef="let element"> {{element.Type}} </td>
+  </ng-container>
+
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="NavPetTreatment(row.ID)"></tr>
+</table>
