--- a/fe-diploma-challenge/src/app/Components/sign-up-page/sign-up-page.component.html
+++ b/fe-diploma-challenge/src/app/Components/sign-up-page/sign-up-page.component.html
@@ -1,6 +1,6 @@
 <div class="sign-up-container">
   <h1>Sign Up</h1>
-  <form class="form-container" (ngSubmit)="signUp()">
+  <form class="form-container" [formGroup]="signUpForm" (ngSubmit)="signUp()">
     <div class="form-container">
       <mat-form-field appearance="outline">
         <mat-label>First Name</mat-label>
@@ -36,6 +36,7 @@
         formControlName="email"
         type="email"
         matInput
+        autocomplete="username"
         placeholder="e.g.john@example.com"
         >
       </mat-form-field>
@@ -44,6 +45,7 @@
       <mat-form-field appearance="outline">
         <mat-label>Password</mat-label>
         <input
+        autocomplete="new-password"
         formControlName="password"
         type="password"
         matInput
@@ -53,6 +55,7 @@
       <mat-form-field appearance="outline">
         <mat-label>Confirm Password</mat-label>
         <input
+        autocomplete="new-password"
         formControlName="confirmPassword"
         type="password"
         matInput placeholder=""
