add pet popup created

--- a/FE/src/app/Components/login-page/login-page.component.html
+++ b/FE/src/app/Components/login-page/login-page.component.html
@@ -19,7 +19,7 @@
         <mat-label>Phone Number</mat-label>
         <input
         type="tel"
-        matInput placeholder="0412342556"
+        matInput placeholder="e.g 0412342556"
         formControlName="Phone"
         >
       </mat-form-field>
