--- a/FE/src/app/Components/pets-page/pets-table/pets-table.component.html
+++ b/FE/src/app/Components/pets-page/pets-table/pets-table.component.html
@@ -1,15 +1,20 @@
 <div class="mat-elevation-z8 table">
-  <table mat-table class="full-width-table" matSort aria-label="Elements">
-    <!-- Id Column -->
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-      <td mat-cell *matCellDef="let row">{{row.id}}</td>
+  <table mat-table [dataSource]="dataSource" class="full-width-table" matSort aria-label="Elements">
+
+    <ng-container matColumnDef="ID">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Pet ID</th>
+      <td mat-cell *matCellDef="let row">{{row.ID}}</td>
     </ng-container>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-      <td mat-cell *matCellDef="let row">{{row.name}}</td>
+
+    <ng-container matColumnDef="PetName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Pet Name</th>
+      <td mat-cell *matCellDef="let row">{{row.PetName}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="Type">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Type</th>
+      <td mat-cell *matCellDef="let row">{{row.Type}}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -23,4 +28,7 @@
       [pageSizeOptions]="[5, 10, 20]"
       aria-label="Select page">
   </mat-paginator>
+</div>
+<div class="center-container">
+  <button (click)="openCreatePetsForm()" mat-raised-button color="primary">Add Pet</button>
 </div>
