--- a/FE/src/app/Components/nav-bar/nav-bar.component.scss
+++ b/FE/src/app/Components/nav-bar/nav-bar.component.scss
@@ -1,4 +1,5 @@
 .nav-button{
+  margin-right: 10px;
 
   transition: all ease 0.5s;
 
@@ -6,4 +7,8 @@
     background-color:darkblue;
   }
 
+}
+
+.active{
+  background-color: darkblue;
 }
