--- a/FE/src/app/Components/treatment-page/treatment-page.component.html
+++ b/FE/src/app/Components/treatment-page/treatment-page.component.html
@@ -1,1 +1,49 @@
-<p>treatment-page works!</p>
+<div class="mat-elevation-z8 table">
+  <table mat-table [dataSource]="dataSource" class="full-width-table" matSort aria-label="Elements">
+
+    <ng-container matColumnDef="ID">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Pet ID</th>
+      <td mat-cell *matCellDef="let row">{{row.ID}}</td>
+    </ng-container>
+
+
+    <ng-container matColumnDef="PetID">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Pet Name</th>
+      <td mat-cell *matCellDef="let row">{{row.PetID}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="PetName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Pet Name</th>
+      <td mat-cell *matCellDef="let row">{{row.PetName}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="Date">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
+      <td mat-cell *matCellDef="let row">{{row.Date}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="Notes">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Notes</th>
+      <td mat-cell *matCellDef="let row">{{row.Notes}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="Payment">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Payment</th>
+      <td mat-cell *matCellDef="let row">{{row.Payment}}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator #paginator
+      [length]="dataSource?.data?.length"
+      [pageIndex]="0"
+      [pageSize]="10"
+      [pageSizeOptions]="[5, 10, 20]"
+      aria-label="Select page">
+  </mat-paginator>
+</div>
+<div class="center-container">
+  <button mat-raised-button color="primary">Add Treatment</button>
+</div>
