--- a/FE/src/styles.scss
+++ b/FE/src/styles.scss
@@ -30,6 +30,16 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .table{
+  display: flex;
   width:80%;
   margin:20px auto;
+  overflow: auto;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+  flex-wrap: wrap;
+}
+
+.paginator{
+  width: 100%;
 }
