work in progress treatment page

--- a/FE/src/app/Components/treatment-page/treatment-page.component.html
+++ b/FE/src/app/Components/treatment-page/treatment-page.component.html
@@ -44,5 +44,5 @@
       </mat-paginator>
 </div>
 <div class="center-container">
-  <button mat-raised-button color="primary">Add Treatment</button>
+  <button (click)="openTreatmentForm()" mat-raised-button color="primary">Add Treatment</button>
 </div>
