--- a/FE/src/app/Components/treatment-page/treatment-page.component.html
+++ b/FE/src/app/Components/treatment-page/treatment-page.component.html
@@ -17,6 +17,11 @@
       <td mat-cell *matCellDef="let row">{{row.PetName}}</td>
     </ng-container>
 
+    <ng-container matColumnDef="ProcedureName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Procedure Name</th>
+      <td mat-cell *matCellDef="let row">{{row.ProcedureName}}</td>
+    </ng-container>
+
     <ng-container matColumnDef="Date">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
       <td mat-cell *matCellDef="let row">{{row.Date}}</td>
