--- a/FE/src/app/Components/treatment-page/treatment-form-dialog/treatment-form-dialog.component.html
+++ b/FE/src/app/Components/treatment-page/treatment-form-dialog/treatment-form-dialog.component.html
@@ -1,16 +1,36 @@
 <form class="sign-up-box" [formGroup]="createTreatmentForm">
+  <div class="form-container">
+
+    <mat-form-field appearance="fill">
+      <mat-label>Choose a date</mat-label>
+      <input matInput formControlName="Date" [matDatepicker]="picker">
+      <mat-hint>MM/DD/YYYY</mat-hint>
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+      <mat-label>Notes</mat-label>
+      <input formControlName="Notes" matInput>
+    </mat-form-field>
+  </div>
     <div class="form-container">
       <mat-form-field appearance="fill">
         <mat-label>Pet</mat-label>
           <mat-select formControlName="Pet">
-            <mat-option *ngFor="let item of pets" value="{{item.PetName}}">{{item.PetName}}</mat-option>
+            <mat-option *ngFor="let item of pets" value="{{item.ID}}">{{item.PetName}}</mat-option>
           </mat-select>
         </mat-form-field>
+
       <mat-form-field appearance="fill">
         <mat-label>Procedure</mat-label>
           <mat-select formControlName="Procedure">
-            <mat-option *ngFor="let item of procedures" value="{{item.ID}}">{{item.Description}}</mat-option>
+            <mat-option *ngFor="let item of procedures" value="{{item.ProcedureID}}">{{item.Description}}</mat-option>
           </mat-select>
         </mat-form-field>
-    </div>
+      </div>
+
+      <div class="center">
+        <button (click)="CreateTreatment()" mat-raised-button color="primary">Add Treatment</button>
+      </div>
 </form>
