--- a/FE/src/app/Components/treatment-page/treatment-page.component.html
+++ b/FE/src/app/Components/treatment-page/treatment-page.component.html
@@ -2,39 +2,44 @@
   <table mat-table [dataSource]="dataSource" class="full-width-table" matSort aria-label="Elements">
 
     <ng-container matColumnDef="ID">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Pet ID</th>
+      <th mat-header-cell *matHeaderCellDef >Treatment ID</th>
       <td mat-cell *matCellDef="let row">{{row.ID}}</td>
     </ng-container>
 
 
     <ng-container matColumnDef="PetID">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Pet Name</th>
+      <th mat-header-cell *matHeaderCellDef >Pet Name</th>
       <td mat-cell *matCellDef="let row">{{row.PetID}}</td>
     </ng-container>
 
     <ng-container matColumnDef="PetName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Pet Name</th>
+      <th mat-header-cell *matHeaderCellDef >Pet Name</th>
       <td mat-cell *matCellDef="let row">{{row.PetName}}</td>
     </ng-container>
 
     <ng-container matColumnDef="ProcedureName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Procedure Name</th>
+      <th mat-header-cell *matHeaderCellDef >Procedure Name</th>
       <td mat-cell *matCellDef="let row">{{row.ProcedureName}}</td>
     </ng-container>
 
     <ng-container matColumnDef="Date">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
+      <th mat-header-cell *matHeaderCellDef >Date</th>
       <td mat-cell *matCellDef="let row">{{row.Date}}</td>
     </ng-container>
 
     <ng-container matColumnDef="Notes">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Notes</th>
+      <th mat-header-cell *matHeaderCellDef >Notes</th>
       <td mat-cell *matCellDef="let row">{{row.Notes}}</td>
     </ng-container>
 
     <ng-container matColumnDef="Payment">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Payment</th>
+      <th mat-header-cell *matHeaderCellDef >Payment</th>
       <td mat-cell *matCellDef="let row">{{row.Payment}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="AmountOwed">
+      <th mat-header-cell *matHeaderCellDef >Amount Owed</th>
+      <td mat-cell *matCellDef="let row">{{row.AmountOwed}}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
