--- a/FE/src/styles.scss
+++ b/FE/src/styles.scss
@@ -42,8 +42,25 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   .mat-cell{
     padding:5px;
   }
+
+  .mat-header-cell{
+    padding:5px;
+  }
 }
 
 .paginator{
   width: 100%;
+}
+
+.form-container{
+  display: flex;
+  flex-direction: row;
+  row-gap: 10px;
+  justify-content: center;
+  align-items: center;
+
+  .mat-form-field{
+    margin-left: 5px;
+  }
+
 }
