--- a/FE/src/app/Components/pets-page/pets-table/pets-table.component.html
+++ b/FE/src/app/Components/pets-page/pets-table/pets-table.component.html
@@ -3,31 +3,23 @@
 
     <ng-container matColumnDef="ID">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Pet ID</th>
-      <td mat-cell *matCellDef="let row">{{row.ID}}</td>
+      <td mat-cell *matCellDef="let row">{{row.id}}</td>
     </ng-container>
 
 
     <ng-container matColumnDef="PetName">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Pet Name</th>
-      <td mat-cell *matCellDef="let row">{{row.PetName}}</td>
+      <td mat-cell *matCellDef="let row">{{row.petName}}</td>
     </ng-container>
 
     <ng-container matColumnDef="Type">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Type</th>
-      <td mat-cell *matCellDef="let row">{{row.Type}}</td>
+      <td mat-cell *matCellDef="let row">{{row.type}}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-
-  <mat-paginator #paginator
-      [length]="dataSource?.data?.length"
-      [pageIndex]="0"
-      [pageSize]="10"
-      [pageSizeOptions]="[5, 10, 20]"
-      aria-label="Select page">
-  </mat-paginator>
 </div>
 <div class="center-container">
   <button (click)="openCreatePetsForm()" mat-raised-button color="primary">Add Pet</button>
