--- a/FE/src/app/Components/treatment-page/treatment-form-dialog/treatment-form-dialog.component.html
+++ b/FE/src/app/Components/treatment-page/treatment-form-dialog/treatment-form-dialog.component.html
@@ -2,11 +2,8 @@
   <div class="form-container">
 
     <mat-form-field appearance="fill">
-      <mat-label>Choose a date</mat-label>
-      <input matInput formControlName="Date" [matDatepicker]="picker">
-      <mat-hint>MM/DD/YYYY</mat-hint>
-      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker #picker></mat-datepicker>
+      <mat-label>Date</mat-label>
+      <input type="date" formControlName="Date" matInput>
     </mat-form-field>
 
     <mat-form-field appearance="fill">
@@ -18,14 +15,14 @@
       <mat-form-field appearance="fill">
         <mat-label>Pet</mat-label>
           <mat-select formControlName="Pet">
-            <mat-option *ngFor="let item of pets" value="{{item.ID}}">{{item.PetName}}</mat-option>
+            <mat-option *ngFor="let item of pets" value="{{item.id}}">{{item.petName}}</mat-option>
           </mat-select>
         </mat-form-field>
 
       <mat-form-field appearance="fill">
         <mat-label>Procedure</mat-label>
           <mat-select formControlName="Procedure">
-            <mat-option *ngFor="let item of procedures" value="{{item.ProcedureID}}">{{item.Description}}</mat-option>
+            <mat-option *ngFor="let item of procedures" value="{{item.procedureId}}">{{item.description}}</mat-option>
           </mat-select>
         </mat-form-field>
       </div>
