--- a/FE/src/app/Components/treatment-page/treatment-page.component.html
+++ b/FE/src/app/Components/treatment-page/treatment-page.component.html
@@ -3,55 +3,48 @@
 
     <ng-container matColumnDef="ID">
       <th mat-header-cell *matHeaderCellDef >Treatment ID</th>
-      <td mat-cell *matCellDef="let row">{{row.ID}}</td>
+      <td mat-cell *matCellDef="let row">{{row.treatmentId}}</td>
     </ng-container>
 
 
     <ng-container matColumnDef="PetID">
       <th mat-header-cell *matHeaderCellDef >Pet Name</th>
-      <td mat-cell *matCellDef="let row">{{row.PetID}}</td>
+      <td mat-cell *matCellDef="let row">{{row.fkPetId}}</td>
     </ng-container>
 
     <ng-container matColumnDef="PetName">
       <th mat-header-cell *matHeaderCellDef >Pet Name</th>
-      <td mat-cell *matCellDef="let row">{{row.PetName}}</td>
+      <td mat-cell *matCellDef="let row">{{row.petName}}</td>
     </ng-container>
 
     <ng-container matColumnDef="ProcedureName">
       <th mat-header-cell *matHeaderCellDef >Procedure Name</th>
-      <td mat-cell *matCellDef="let row">{{row.ProcedureName}}</td>
+      <td mat-cell *matCellDef="let row">{{row.procedureName}}</td>
     </ng-container>
 
     <ng-container matColumnDef="Date">
       <th mat-header-cell *matHeaderCellDef >Date</th>
-      <td mat-cell *matCellDef="let row">{{row.Date}}</td>
+      <td mat-cell *matCellDef="let row">{{row.date}}</td>
     </ng-container>
 
     <ng-container matColumnDef="Notes">
       <th mat-header-cell *matHeaderCellDef >Notes</th>
-      <td mat-cell *matCellDef="let row">{{row.Notes}}</td>
+      <td mat-cell *matCellDef="let row">{{row.notes}}</td>
     </ng-container>
 
     <ng-container matColumnDef="Payment">
       <th mat-header-cell *matHeaderCellDef >Payment</th>
-      <td mat-cell *matCellDef="let row">{{row.Payment}}</td>
+      <td mat-cell *matCellDef="let row">{{row.payment}}</td>
     </ng-container>
 
     <ng-container matColumnDef="AmountOwed">
       <th mat-header-cell *matHeaderCellDef >Amount Owed</th>
-      <td mat-cell *matCellDef="let row">{{row.AmountOwed}}</td>
+      <td mat-cell *matCellDef="let row">{{row.amountOwed}}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-      <mat-paginator #paginator class="paginator"
-        [length]="dataSource?.data?.length"
-        [pageIndex]="0"
-        [pageSize]="2"
-        [pageSizeOptions]="[3, 10, 20]"
-      aria-label="Select page">
-      </mat-paginator>
 </div>
 <div class="center-container">
   <button (click)="openTreatmentForm()" mat-raised-button color="primary">Add Treatment</button>
