--- a/FE/src/app/Components/nav-bar/nav-bar.component.html
+++ b/FE/src/app/Components/nav-bar/nav-bar.component.html
@@ -5,6 +5,7 @@
     <ng-container *ngIf="IsLoggedIn">
       <button class="nav-button" mat-raised-button routerLink="/pets" routerLinkActive="active" color="primary">My Pets</button>
       <button class="nav-button" mat-raised-button routerLink="/treatment" routerLinkActive="active" color="primary">Treatments</button>
+      <button class="nav-button" mat-raised-button routerLink="/account" routerLinkActive="active" color="primary">Account</button>
       <button
 
       style="margin-left:auto;"
