removed partial from ef model

--- a/FE/src/app/Components/treatment-page/treatment-form-dialog/treatment-form-dialog.component.html
+++ b/FE/src/app/Components/treatment-page/treatment-form-dialog/treatment-form-dialog.component.html
@@ -22,7 +22,7 @@
       <mat-form-field appearance="fill">
         <mat-label>Procedure</mat-label>
           <mat-select formControlName="Procedure">
-            <mat-option *ngFor="let item of procedures" value="{{item.procedureId}}">{{item.description}}</mat-option>
+            <mat-option *ngFor="let item of procedures" value="{{item.id}}">{{item.description}}</mat-option>
           </mat-select>
         </mat-form-field>
       </div>
