--- a/FE/src/app/app.component.html
+++ b/FE/src/app/app.component.html
@@ -1,5 +1,11 @@
-<div class="container">
-  <app-nav-bar></app-nav-bar>
-  <router-outlet></router-outlet>
+<div class="app-container">
+  <mat-sidenav-container>
+    <mat-sidenav-content>
+      <app-nav-bar></app-nav-bar>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+
 </div>
+
 
