--- a/FE/src/app/Components/orders/orders.component.html
+++ b/FE/src/app/Components/orders/orders.component.html
@@ -6,35 +6,39 @@
         <th mat-header-cell *matHeaderCellDef>Description</th>
         <td mat-cell *matCellDef="let row">{{row.description}}</td>
       </ng-container>
-  
+
       <!-- Name Column -->
       <ng-container matColumnDef="orderDate">
         <th mat-header-cell *matHeaderCellDef>Order Date</th>
         <td mat-cell *matCellDef="let row">{{row.orderDate}}</td>
       </ng-container>
-  
+
       <!-- Name Column -->
       <ng-container matColumnDef="quantity">
         <th mat-header-cell *matHeaderCellDef>Qty</th>
         <td mat-cell *matCellDef="let row">{{row.quantity}}</td>
       </ng-container>
-  
+
       <!-- Name Column -->
       <ng-container matColumnDef="shipDate">
         <th mat-header-cell *matHeaderCellDef>Ship Date</th>
         <td mat-cell *matCellDef="let row">{{row.shipDate}}</td>
       </ng-container>
-  
+
       <!-- Name Column -->
       <ng-container matColumnDef="shipMode">
         <th mat-header-cell *matHeaderCellDef>Ship Mode</th>
         <td mat-cell *matCellDef="let row">{{row.shipMode}}</td>
       </ng-container>
+      <ng-container matColumnDef="total">
+        <th mat-header-cell *matHeaderCellDef>Total</th>
+        <td style="white-space: nowrap;" mat-cell *matCellDef="let row">$ {{row.total}}</td>
+      </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row (click)="editOrder(row)" *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-</div>  
+</div>
 <button (click)="navOrders()" mat-raised-button color="primary">Create order</button>
 </div>
 
-  
+
