--- a/FE/src/app/Components/orders/orders.component.html
+++ b/FE/src/app/Components/orders/orders.component.html
@@ -30,6 +30,10 @@
         <th mat-header-cell *matHeaderCellDef>Ship Mode</th>
         <td mat-cell *matCellDef="let row">{{row.shipMode}}</td>
       </ng-container>
+      <ng-container matColumnDef="gst">
+        <th mat-header-cell *matHeaderCellDef>GST</th>
+        <td style="white-space: nowrap;" mat-cell *matCellDef="let row">$ {{row.gst}}</td>
+      </ng-container>
       <ng-container matColumnDef="total">
         <th mat-header-cell *matHeaderCellDef>Total</th>
         <td style="white-space: nowrap;" mat-cell *matCellDef="let row">$ {{row.total}}</td>
